<resources>
    <string name="app_name">Who Wants to be a Millionare DJB</string>
    <string name="play_game">Play Game</string>
    <string name="game_logo">Game Logo</string>
    <string name="game_background">Game Background</string>
    <string name="play_again">Play Again</string>
    <string name="you_lost">You Lost</string>
    <string name="text_to_be_replaced">text to be replaced</string>
    <string name="you_win">You Win!</string>
    <string name="you_won_1_000_000">You won $1,000,000!</string>
    <string name="answer">Answer</string>
    <string name="question_text">Question Text</string>
    <string name="_0">$0</string>
    <string name="question_1">Question 1</string>
    <string name="question_10">Question 10</string>
    <string name="_500_000">$500,000</string>
    <string name="question_3">Question 3</string>
    <string name="_400">$400</string>
    <string name="question_4">Question 4</string>
    <string name="_1_000">$1,000</string>
    <string name="_100">$100</string>
    <string name="question_2">Question 2</string>
    <string name="question_5">Question 5</string>
    <string name="_2_000">$2,000</string>
    <string name="question_6">Question 6</string>
    <string name="_6_000">$6,000</string>
    <string name="question_7">Question 7</string>
    <string name="_26_000">$26,000</string>
    <string name="_100_000">$100,000</string>
    <string name="question_8">Question 8</string>
    <string name="_250_000">$250,000</string>
    <string name="question_9">Question 9</string>
    <string name="fail_massage">You answered a question incorrectly\nCare to try again?</string>
    <string name="q1">What Itallian merchant famously traveled to Asia and back along the silk road?</string>
    <string name="marco_polo">Marco Polo</string>
    <string name="galileo_galilei">Galileo Galilei</string>
    <string name="leonardo_da_vinci">Leonardo Da Vinci</string>
    <string name="christopher_columbus">Christopher Columbus</string>
    <string name="what_do_you_call_a_triangle_whose_sides_are_all_equal_in_length">What do you call a triangle whose sides are all equal in length?</string>
    <string name="scalene">Scalene</string>
    <string name="isosceles">Isosceles</string>
    <string name="equilateral">Equilateral</string>
    <string name="regular">Regular</string>
    <string name="what_determines_how_much_you_weigh_on_a_planet">What determines how much an object weighs on a planet?</string>
    <string name="mass_and_gravity">Mass and Gravity</string>
    <string name="mass_and_acceleration">Mass and volume</string>
    <string name="acceleration_and_gravity">acceleration and gravity</string>
    <string name="gravity">gravity</string>
    <string name="what_element_is_denoted_by_the_chemical_symbol_fe">What element is denoted by the chemical symbol Fe?</string>
    <string name="fermium">Fermium</string>
    <string name="flerovium">Flerovium</string>
    <string name="iron">Iron</string>
    <string name="gold">Gold</string>
    <string name="who_painted_the_painting_starry_night">Who painted the painting \'Starry Night\'?</string>
    <string name="pablo_picasso">Pablo Picasso</string>
    <string name="vincent_van_gogh">Vincent Van Gogh</string>
    <string name="keith_haring">Keith Haring</string>
    <string name="katsushika_hokusai">Katsushika Hokusai</string>
    <string name="what_is_the_term_in_english_where_two_things_are_compared_without_using_the_words_like_or_as">What is the term in English where two things are compared without using the words \'like\' or \'as\'?</string>
    <string name="similie">Similie</string>
    <string name="alegory">Alegory</string>
    <string name="metaphor">Metaphor</string>
    <string name="symbolism">Symbolism</string>
    <string name="what_is_a_common_name_for_the_excess_or_loose_skin_at_the_joint_of_one_s_elbow">What is a common name for the excess or loose skin at the joint of one\'s elbow?</string>
    <string name="humerus">Humerus</string>
    <string name="pronator_teres">Pronator teres</string>
    <string name="brachialis">Brachialis</string>
    <string name="weenus">Weenus</string>
    <string name="if_you_have_a_score_of_15_in_tennis_and_you_score_another_point_what_is_your_score_now">If you have a score of 15 in tennis and you score another point, what is your score now?</string>
    <string name="love">love</string>
    <string name="_30">30</string>
    <string name="_40">40</string>
    <string name="_16">16</string>
    <string name="what_was_the_first_home_video_game_console">What was the first home video game console?</string>
    <string name="atari_pong">Atari Pong</string>
    <string name="commodore_64">Commodore 64</string>
    <string name="dreamcast">Dreamcast</string>
    <string name="nintendo_entertainment_system">Nintendo Entertainment System</string>
    <string name="what_is_the_true_name_of_he_who_must_not_be_named">What is the true name of \'He who must not be named\'?</string>
    <string name="tom_marvolo_riddle">Tom Marvolo Riddle</string>
    <string name="hannibal_lecter">Hannibal Lecter</string>
    <string name="anakin_skywalker">Anakin Skywalker</string>
    <string name="sauron">Sauron</string>
</resources>
