<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question10">

    <ImageView
        android:id="@+id/questionBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/game_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/number10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:text="@string/question_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/money10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:text="@string/_500_000"
        android:textColor="#84FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:text="@string/what_is_the_true_name_of_he_who_must_not_be_named"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q10a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/q10a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="toWin"
        android:text="@string/tom_marvolo_riddle"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q10a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q10a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail10"
        android:text="@string/hannibal_lecter"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q10a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q10a3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail10"
        android:text="@string/sauron"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q10a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q10a4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail10"
        android:text="@string/anakin_skywalker"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>