<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question9">

    <ImageView
        android:id="@+id/questionBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/game_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <TextView
        android:id="@+id/money9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:text="@string/_250_000"
        android:textColor="#84FF00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:text="@string/question_9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question9"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:text="@string/what_was_the_first_home_video_game_console"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q9a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/q9a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="toQuestion10"
        android:text="@string/atari_pong"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q9a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q9a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail9"
        android:text="@string/commodore_64"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q9a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q9a3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail9"
        android:text="@string/nintendo_entertainment_system"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q9a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/q9a4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail9"
        android:text="@string/dreamcast"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>