<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question6">

    <!-- background -->
    <ImageView
        android:id="@+id/questionBackground"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/game_background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background" />

    <!-- Question number -->
    <TextView
        android:id="@+id/number6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:text="@string/question_6"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- amount won so far -->
    <TextView
        android:id="@+id/money6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:text="@string/_6_000"
        android:textColor="#84FF00"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Question -->
    <TextView
        android:id="@+id/question6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:text="@string/what_element_is_denoted_by_the_chemical_symbol_fe"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/q6a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <!-- Answer 1 -->
    <Button
        android:id="@+id/q6a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail6"
        android:text="@string/fermium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q6a2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <!-- Answer 2 -->
    <Button
        android:id="@+id/q6a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="toQuestion7"
        android:text="@string/iron"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q6a3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <!-- Answer 3 -->
    <Button
        android:id="@+id/q6a3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail6"
        android:text="@string/gold"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/q6a4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <!-- Answer 4 -->
    <Button
        android:id="@+id/q6a4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#8D3D8DDC"
        android:onClick="fail6"
        android:text="@string/flerovium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>